<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/menu_reminder" />
        <item
            android:id="@+id/nav_weight"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_weight" />
        <item android:title="@string/menu_contact">
            <menu>
                <item
                    android:id="@+id/nav_twitter"
                    android:icon="@drawable/tw__composer_logo_blue"
                    android:title="@string/menu_twitter"/>
            </menu>
        </item>
    </group>
</menu>
