<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreditsFragment">

    <TextView
        android:id="@+id/imageSourceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_image_header"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/imageSource1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_image_link_1" />

    <TextView
        android:id="@+id/imageSource2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_image_link_2" />

    <TextView
        android:id="@+id/androidPlotHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_androidplot"
        android:textAlignment="center"
        android:textSize="@dimen/credits_header_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/androitPlotSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_androitplot_link" />

    <TextView
        android:id="@+id/picassoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_picasso"
        android:textAlignment="center"
        android:textSize="@dimen/credits_header_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/picassoSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_picasso_link" />

    <TextView
        android:id="@+id/openWeatherMapHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_openweathermap"
        android:textAlignment="center"
        android:textSize="@dimen/credits_header_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/openWeatherMapSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_openweathermap_link" />

    <TextView
        android:id="@+id/volleyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="@dimen/credits_header_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/volleySource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_volley_link" />
</LinearLayout>