<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_edit_black_24dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2">

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/run_history_page_distance_label_km_text"
                android:textSize="@dimen/run_history_page_label_text_size" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="@dimen/run_history_page_label_text_size" />

            <TextView
                android:id="@+id/durationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/run_history_page_duration_label_text"
                android:textSize="@dimen/run_history_page_label_text_size" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="@dimen/run_history_page_label_text_size" />

            <TextView
                android:id="@+id/caloriesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/run_history_page_calories_label_text"
                android:textSize="@dimen/run_history_page_label_text_size" />

            <TextView
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="@dimen/run_history_page_label_text_size" />
        </GridLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>